<resources>
    <string name="app_name">HealthBuddy</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_dashboard_doctor">DashboardDoctor</string>
    <string name="title_home">My Appointments</string>
    <string name="title_profile">My Profile</string>
    <string name="title_donate_med">Donate Medicine</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_dashboard">UserDashboardActivity</string>
    <string name="title_user_my_app">My Appointments</string>
    <string name="title_user_profile">My Profile</string>
    <string name="title_user_order_med">Order Medicine</string>
    <string name="title_user_home">Home</string>
</resources>