<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.healthbuddy.patient.dashboard.ui.home.HomeFragment"
        android:label="@string/title_user_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_user_app"
        android:name="com.example.healthbuddy.patient.dashboard.ui.appointment.AppointmentFragment"
        android:label="@string/title_user_my_app"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_user_profile"
        android:name="com.example.healthbuddy.patient.dashboard.ui.profile.UserProfileFragment"
        android:label="@string/title_user_profile"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_ordermed"
        android:name="com.example.healthbuddy.patient.dashboard.ui.ordermed.OrderMedicineFragment"
        android:label="@string/title_user_order_med"
        tools:layout="@layout/fragment_slideshow" />
</navigation>