<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.healthbuddy.dashboard.doctor.navigation.appointment.DoctorAppointmentFragment"
        android:label="@string/title_home"
        tools:layout="@layout/doctor_appointment_fragment" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.healthbuddy.dashboard.doctor.navigation.profile.DoctorProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.healthbuddy.dashboard.doctor.navigation.medicine.DonateMedicineFragment"
        android:label="@string/title_donate_med"
        tools:layout="@layout/fragment_notifications" />
</navigation>